--- a/css/style.css
+++ b/css/style.css
@@ -7,6 +7,12 @@ body {
 #white_section {
   width: 750px;
   border: 1px solid black;
+  border-top-right-radius: 25px;
+}
+
+#path {
+  margin-top: 0px;
+  margin-bottom: 0px;
 }
 
 #path li {
@@ -26,4 +32,20 @@ body {
 #path_bottom_border {
   border-bottom: 1px solid gray;
   width: 698px;
+}
+
+#white_section h2 {
+  font-size: 18px;
+  margin-top: 3px;
+  padding-left: 40px;
+  margin-bottom: 4px;
+}
+
+#blue_within_white {
+  background-color: #CCCCFF;
+  width: 750px;
+  /* Box shadow for top only from http://jsfiddle.net/karigrooms/3fTyt/ */
+  -webkit-box-shadow: inset 0 20px 20px -20px rgba(0,0,0,0.8);
+  -moz-box-shadow: inset 0 20px 20px -20px rgba(0,0,0,0.8);
+  box-shadow: inset 0 20px 20px -20px rgba(0,0,0,0.8);
 }
