--- a/css/style.css
+++ b/css/style.css
@@ -49,3 +49,15 @@ body {
   -moz-box-shadow: inset 0 20px 20px -20px rgba(0,0,0,0.8);
   box-shadow: inset 0 20px 20px -20px rgba(0,0,0,0.8);
 }
+
+#blue_within_white li{
+  display: inline;
+}
+
+#blue_within_white li a {
+  color: #456793;
+  font-style: italic;
+  font-weight: bold;
+  text-decoration: none;
+  font-size: 13px;
+}
