--- a/css/style.css
+++ b/css/style.css
@@ -1,20 +1,32 @@
 li {
   list-style: none;
-  margin: 0;
+  /*margin: 0;*/
 }
 
 a {
   text-decoration: none;
+  color: #937b9e;
+}
+
+ul {
+  margin: 0;
+  padding: 0;
 }
 
 nav {
-  background-color: 36223e;
+/*. . . . . . . . . . . . . . . .
+  use next 3 lines for easy comparison to model site & then delete
+. . . . . . . . . . . . . . . .*/
+  position: absolute;
+  top: 146px;
+  left: 42px;
+
+  background-color: #36223e;
   width: 200px;
-  margin: 0;
 }
 
 nav > ul > ul > li {
   font-family: Helvetica, Arial, sans-serif;
   font-size: 12px;
-  padding: 5px 15px;
+  padding: 5px 0 5px 15px;
 }
