--- a/css/style.css
+++ b/css/style.css
@@ -42,8 +42,9 @@ body {
 }
 
 #blue_within_white {
-  background-color: #CCCCFF;
+  background-color: rgb(202, 214, 232);
   width: 750px;
+  min-height: 300px; /*while working on */
   /* Box shadow for top only from http://jsfiddle.net/karigrooms/3fTyt/ */
   -webkit-box-shadow: inset 0 20px 20px -20px rgba(0,0,0,0.8);
   -moz-box-shadow: inset 0 20px 20px -20px rgba(0,0,0,0.8);
@@ -54,10 +55,51 @@ body {
   display: inline;
 }
 
-#blue_within_white li a {
-  color: #456793;
+#blue_within_white .tabs_ul a {
+  color: rgb(114, 138, 177);
+  background-color: rgb(225, 235, 249);
   font-style: italic;
   font-weight: bold;
   text-decoration: none;
   font-size: 13px;
+  border-top-right-radius: 8px;
+  border-top-left-radius: 8px;
+  border: 1px solid rgb(188, 201, 223);
+  padding: 4px 50px;
+}
+
+#blue_within_white .tabs_ul a:hover {
+  color: rgb(53, 82, 133);
+}
+
+.tabs a {
+  margin-top:200px;
+  margin-right: -3px;
+  -webkit-box-shadow: 0px 4px 7px 0px rgba(156, 174, 206, 1);
+  -moz-box-shadow:  0px 4px 7px 0px rgba(156, 174, 206, 1);
+  box-shadow: 0px 4px 7px 0px rgba(156, 174, 206, 1);
+
+}
+
+.tabs_ul {
+  /* moves tabs down from top-border of #blue_within_white */
+ position: relative;
+ top: 13px;
+}
+
+#blue_within_white .tabs_ul:first-child {
+  left: 85px;
+  /*this indents the top line of folder tabs */
+}
+
+#blue_within_white .tabs_ul:nth-child(2) {
+  top: 6px;
+}
+
+#blue_within_white .tabs_ul #education_tab {
+  border-top-left-radius: 22px!important;
+}
+
+#overview {
+  background-color: white !important;
 }
