--- a/css/style.css
+++ b/css/style.css
@@ -6,10 +6,14 @@ body {
   color: white;
   font-weight: bold;
   padding: 2px 0 2px 10px;
+  margin-bottom: -16px;
   }
 .secondary li {
   list-style-type: none;
-  margin: 0 0 0 -30px;
+  margin: 0 0 2px -40px;
+  padding: 2px 0 2px 5px;
+  background-color: rgb(212,222,235);
+  font-size: 12px;
 }
 .secondary header.red {
   background: transparent url('../images/bg-header-red.png') repeat-y;
@@ -27,3 +31,46 @@ body {
   background: transparent url('../images/bg-header-blue.png') repeat-y;
   }
 
+.secondary .facts {
+  font-weight: bold;
+}
+
+.secondary .units {
+
+}
+
+.secondary .units li {
+  display: inline;
+  color: gray;
+  margin: 0 32px 0 -40px;
+  padding: 4px;
+}
+
+.secondary .units li:before {
+content: " | ";
+}
+
+.secondary .units li:first-child:before {
+  content: none;
+}
+
+.secondary .units .active {
+  color: black;
+}
+
+.secondary .factlist {
+  margin: -11px 0 0 0;
+}
+
+.secondary .factlist span {
+  color: darkblue;
+}
+
+.secondary .resources {
+  font-weight: bold;
+  color: darkblue;
+}
+
+.secondary .date-event span {
+  font-weight: bold;
+}
