--- a/css/style.css
+++ b/css/style.css
@@ -136,5 +136,7 @@ body {
 #moon_box {
   position: relative;
   top: 10px;
+  padding: 4px;
+  margin: 11px 9px 7px 11px;
   border: 1px solid rgb(121, 142, 178);
 }
