finished nav styling and positioning

--- a/css/style.css
+++ b/css/style.css
@@ -1,23 +1,4 @@
-/*---------------------------------------
-body declaration used while positioning
----------------------------------------*/
-body {
-  background-color: #000000;
-}
-/*---------------------------------------
-delete body declaration when done positioning
----------------------------------------*/
-
 nav {
-/*---------------------------------------
-next 3 lines for easy comparison to model site
----------------------------------------*/
-  position: absolute;
-  top: 150px;
-  left: 41px;
-/*---------------------------------------
-delete previous 3 lines when done positioning
----------------------------------------*/
   background-color: #36223e;
   width: 200px;
 }
@@ -47,6 +28,10 @@ nav > ul > ul > li {
   padding: 6px 0 4px 15px;
 }
 
+nav > ul > ul > li:nth-child(6) a {
+  color: #ffffff;
+}
+
 nav > ul > ul > li:last-child {
   padding-bottom: 14px;
 }
@@ -54,3 +39,56 @@ nav > ul > ul > li:last-child {
 nav > ul > ul > li > a:hover {
   color: #ffffff;
 }
+
+.sidebar_misc {
+  width: 200px;
+  background-color: #09234a;
+  margin: -4px 0 0 0;
+}
+
+.searchbox {
+  padding: 16px 0 0 12px;
+}
+
+.searchbox > img:first-child {
+  float: left;
+}
+
+.searchbox > img:last-child {
+  float: left;
+}
+
+.clear {
+  clear: both;
+}
+
+/*selects the follow box*/
+.sidebar_misc > img:nth-child(2) {
+  padding: 13px 0 0 12px;
+}
+
+/*selects the webby image*/
+.sidebar_misc > img:nth-child(3) {
+  padding: 5px;
+}
+
+/*---------------------------------------
+body declaration used while positioning
+---------------------------------------*/
+body {
+  background-color: #000000;
+}
+/*---------------------------------------
+delete body declaration when done positioning
+---------------------------------------*/
+
+.sidebar {
+/*---------------------------------------
+next 3 lines for easy comparison to model site
+---------------------------------------*/
+  position: absolute;
+  top: 150px;
+  left: 41px;
+/*---------------------------------------
+delete previous 3 lines when done positioning
+---------------------------------------*/
